@@ -62,6 +62,18 @@ dependencyManagement {
 	}
 }
 
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs '--enable-preview'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
